# pornganize

./: .editorconfig  .env  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .spelling-wordlist.txt  .yamllint.yaml  Cargo.toml  LICENSE  README.md
.vim/: cSpell.json  coc-settings.json
backend/: Cargo.toml  clap-config.yaml
backend/src/: clean.rs  cli.rs  config.rs  lib.rs  main.rs  merge.rs  server.rs
backend/src/app/: mod.rs
backend/src/database/: base.rs  mod.rs
backend/src/detached/: mod.rs  nix.rs  win.rs
backend/src/model/: actors.rs  games.rs  mangas.rs  mod.rs  tags.rs
backend/src/server/: mod.rs
backend/src/server/detached/: mod.rs  nix.rs
core/: Cargo.toml
core/src/: config.rs  db.rs  lib.rs  plugins.rs  runner.rs  sections.rs
docs/: spelling_wordlist.txt
frontend/: angular.json  karma.conf.js  package.json
frontend/e2e/src/: app.e2e-spec.ts
frontend/src/app/: app.component.spec.ts
macros/: Cargo.toml
macros/src/: lib.rs
pornganize-core/: Cargo.toml
pornganize-core/src/: config.rs  db.rs  lib.rs  util.rs
pornganize-core/src/db/: protobuf.rs
pornganize-db/: Cargo.toml  build.rs
pornganize-db/protos/: actor.proto  art-common.proto  common.proto  custom.proto  dvd.proto  game.proto  image.proto  manga.proto  network.proto  site.proto  studio.proto  tag.proto  video.proto
pornganize-db/src/: lib.rs  model.rs  persist.rs
pornganize-db/src/model/: actor.rs  actors.rs  common.rs  custom.rs  dvd.rs  dvds.rs  game.rs  games.rs  image.rs  images.rs  manga.rs  mangas.rs  mod.rs  network.rs  site.rs  sites.rs  studio.rs  studios.rs  tag.rs  tags.rs  video.rs  videos.rs
pornganize-db/src/model/common/: datetime.rs  vecs.rs
pornganize-db/src/model/messages/: actor.rs  art_common.rs  common.rs  custom.rs  dvd.rs  game.rs  image.rs  manga.rs  mod.rs  network.rs  site.rs  studio.rs  tag.rs  video.rs
pornganize-macros/: Cargo.toml
pornganize-macros/src/: db.rs  lib.rs  protobuf_model.rs  util.rs
pornganize-plugins/: Cargo.toml
pornganize-web/: Cargo.toml
pornganize-web/src/: lib.rs
src/: clean.rs  main.rs  merge.rs  opts.rs  server.rs
src/detached/: mod.rs  nix.rs  win.rs
web/: Cargo.toml
web/frontend/: package.json  tslint.json
web/frontend/e2e/src/: app.po.ts
web/frontend/src/: index.html
web/frontend/src/app/: app.component.html  app.component.ts
