[package]
name = 'pornganize'
version = '0.1.0'
authors = ['Brendan McGloin <stmonkeydoom@gmail.com>']
description = "Organize your smut!"
edition = '2018'
publish = false
license = "MIT"
default-run = 'pornganize'

[[bin]]
name = 'pornganize'
path = 'src/main.rs'

[workspace]
members = [
    '.',
    'core',
    'macros',
    'web',
]

[dependencies]
pornganize-core = { version = "0.1.0", path="core" }
pornganize-macros = { version = "0.1.0", path="macros" }
pornganize-web = { version = "0.1.0", path="web", optional=true }
#ffmpeg-next = { version = '4.3.7', optional = true }
#mp4parse = { version = '0.11.4', optional = true }
clap = "2.33.3"
structopt = "0.3.20"
dotenv = "0.15.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"
derive_builder = "0.9.0"
cfg-if = "1.0.0"
serde_yaml = "0.8.14"

[target.'cfg(windows)'.dependencies]
windows-service = "0.3.1"

[target.'cfg(unix)'.dependencies]
daemonize = "0.4.1"

[features]
default = ["web"]
web = ["pornganize-web"]
#video-processing = ["ffmpeg-next", "mp4parse"]
