[package]
name = "pornganize"
version = "0.1.0"
authors = ["Brendan McGloin <stmonkeydoom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-broker = "0.3.1"
actix-files = "0.4.0"
actix-lua = "0.7.0"
actix-web = "3.2.0"
sled = "0.34.4"
serde_json = "1.0.59"
serde = "1.0.117"
clap = "2.33.3"
serde_yaml = "0.8.14"
mp4parse = "0.11.4"
ffmpeg-next = "4.3.7"
debug-rs = "0.1.3"
regex = "1.4.2"
