[package]
name = 'pornganize'
version = '0.1.0'
authors = ['Brendan McGloin <stmonkeydoom@gmail.com>']
edition = '2018'
publish = false
workspace = '..'
default-run = 'pornganize'
#default-run = 'pornganize-server'


[dependencies]
actix-broker = '0.3.1'
actix-files = '0.4.0'
actix-lua = '0.7.0'
actix-web = { version = '3.2.0', features = ['secure-cookies'] }
actix-web-requestid = '0.3.0'
clap = { version = "2.33.3", features = ["yaml"] }
debug-rs = '0.1.3'
ffmpeg-next = '4.3.7'
mp4parse = '0.11.4'
num_cpus = '1.13.0'
regex = '1.4.2'
serde_json = '1.0.59'
serde = { version = '1.0.117', features = ['derive'] }
serde_yaml = '0.8.14'
sled = '0.34.4'
actix-daemon-utils = '0.4.2'
actix = '0.10.0'
actix-taskqueue = '0.1.0'
gexiv2-sys = '1.1.2'

[[bin]]
name = 'pornganize'
path = 'src/main.rs'

[[bin]]
name = 'pornganize-server'
path = 'src/bin/server.rs'
