[package]
name = 'pornganize'
version = '0.1.0'
authors = ['Brendan McGloin <stmonkeydoom@gmail.com>']
edition = '2018'
publish = false
workspace = '..'
default-run = 'pornganize'

[dependencies]
actix-broker = '0.3.1'
actix-files = '0.4.0'
actix-web = { version = '3.2.0', features = ['secure-cookies'] }
actix-web-requestid = '0.3.0'
clap = { version = "2.33.3", features = ["yaml"] }
num_cpus = '1.13.0'
regex = '1.4.2'
serde_json = '1.0.59'
serde = { version = '1.0.117', features = ['derive'] }
serde_yaml = '0.8.14'
actix = '0.10.0'
actix-taskqueue = '0.1.0'
derive_more = "0.99.11"
derive_builder = "0.9.0"
log = { version = "0.4.11", features = ["release_max_level_info", "max_level_debug"] }
pretty_env_logger = "0.4.0"
# For plugins
actix-lua = { version = '0.7.0', optional = true }
# Used for video processing
ffmpeg-next = { version = '4.3.7', optional = true }
mp4parse = { version = '0.11.4', optional = true }
sqlx = { version = "0.4.1", features = ["all-databases", "default", "time", "runtime-actix-rustls"] }
dotenv = "0.15.0"
cfg-if = "1.0.0"
walkdir = "2.3.1"
glob = "0.3.0"
heck = "0.3.1"
structopt = "0.3.20"

[features]
default = ["plugins"]
plugins = ["actix-lua"]
video-processing = ["ffmpeg-next", "mp4parse"]

[target.'cfg(windows)'.dependencies]
windows-service = "0.3.1"

[target.'cfg(unix)'.dependencies]
daemonize = "0.4.1"

[[bin]]
name = 'pornganize'
path = 'src/main.rs'
