[package]
name = "pornganize-core"
version = "0.1.0"
authors = ["Brendan McGloin <stmonkeydoom@gmail.com>"]
edition = "2018"
workspace = '..'

[lib]
name = "pornganize"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
anyhow = "1.0.34"
async-trait = "0.1.42"
json = "0.12.4"
log = { version = "0.4.11", features = ["release_max_level_info", "max_level_debug"] }
num_cpus = "1.13.0"
serde = { version = "1.0.117", features = ["derive"] }
#sled = { version = "0.34.6", features = ["compression"] }
#sled = { version = "0.34.6", features = ["compression", "pretty_backtrace", "event_log"], optional = true}
serde_bytes = "0.11.5"
sled = { version = "0.34.6", features = ["compression", "pretty_backtrace", "event_log"]}
tantivy = { version = "0.13.2", features = ["lz4-compression"] }

[features]
default = []
