[package]
name = "pornganize-core"
version = "0.1.0"
authors = ["Brendan McGloin <stmonkeydoom@gmail.com>"]
edition = "2018"
workspace = '..'

[lib]
name = "pornganize"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.0"
log = { version = "0.4.11", features = ["release_max_level_info", "max_level_debug"] }
actix = "0.10.0"
serde = { version = "1.0.117", features = ["derive"] }
protobuf = { version = "2.18.0", features = ["with-serde"], optional=true }

[features]
default = ["protobuf-db"]
protobuf-db = ["protobuf"]
