[package]
name = "pornganize-db"
version = "0.1.0"
authors = ["Brendan McGloin <stmonkeydoom@gmail.com>"]
edition = "2018"
workspace = '..'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pornganize-core = {path="../pornganize-core"}
sqlx = { version = "0.4.1", features = ["all-databases", "default", "time", "runtime-actix-rustls"] }
sql-builder = "3.1.1"
time = { version = "0.2.22", features = ["serde"] }
log = "0.4.11"
serde = "1.0.117"
serde_derive = "1.0.117"
