[package]
name = "pornganize-db"
version = "0.1.0"
authors = ["Brendan McGloin <stmonkeydoom@gmail.com>"]
edition = "2018"
#include = ["/protos/", "src/**/*", "Cargo.toml"]
workspace = '..'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pornganize-core = {path="../pornganize-core"}
pornganize-macros = { path="../pornganize-macros" }
log = "0.4.11"
serde = "1.0.117"
serde_derive = "1.0.117"
sled = { version = "0.34.6", features = ["compression", "event_log"] }
tantivy = { version = "0.13.2", features = ["lz4-compression"] }
protobuf = { version = "2.18.0", features = ["with-serde"] }
chrono = { version = "0.4.19", features = ["serde"] }

[build-dependencies]
protobuf-codegen-pure = "2.18.0"
walkdir = "2.3.1"

