[package]
name = "pornganize-plugins"
version = "0.1.0"
authors = ["Brendan McGloin <stmonkeydoom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pornganize-core = {path="../pornganize-core"}
pornganize-db = {path="../pornganize-db"}
actix = '0.10.0'
actix-lua = { version = '0.7.0', optional = true }
